[package]
name = "aio"
description = "Streamlined AI Terminal Interactions"
version = "0.3.0"
edition = "2021"
authors = ["Gabin Lefranc <gabin.lefranc@gmail.com>"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.1.0"
clap = { version = "4.2.2", features = ["derive"] }
crossterm = "0.26.1"
lazy_static = "1.4.0"
num-traits = "0.2"
pin-project = "1.1"
regex = "1.7.3"
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate", "json", "stream", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9"
smartstring = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"

cargo_info = { path = "crates/cargo_info" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = {version = "0.10", features = ["vendored"]}