[package]
name = "aio-cli"
description = "Streamlined AI Terminal Interactions"
version = "0.7.1"
edition = "2021"
authors = ["Gabin Lefranc <gabin.lefranc@gmail.com>"]
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "parsing"]
repository = "https://github.com/glcraft/aio"
homepage = "https://github.com/glcraft/aio"
keywords = ["cli", "terminal", "ai", "openai", "markdown"]

[[bin]]
name = "aio"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1.0"
clap = { version = "4.2.2", features = ["derive"] }
crossterm = "0.27"
num-traits = "0.2"
once_cell = "1.18"
pin-project = "1.1"
regex = "1.7.3"
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate", "json", "stream", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9"
smartstring = { version = "1.0", features = ["serde"] }
tempfile = "3.8"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
tokio-util = {version = "0.7", features = ["io"]}

aio-cargo-info = { path = "./crates/aio-cargo-info", version = "0.1" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = {version = "0.10", features = ["vendored"]}