[package]
name = "cargo_info"
version = "0.1.0"
edition = "2021"
authors = ["Gabin Lefranc <gabin.lefranc@gmail.com>"]
license = "MIT"
description = "Retreive Cargo.toml information"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }